XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 5.0.0
    • 4.6.1
    • forestdb
    • None
    • Untriaged
    • Unknown

    Description

      Taken from GitHub issue in couchbase-lite-ios:

        https://github.com/couchbase/couchbase-lite-ios/issues/1686

       

      I'm seeing a lot of these crashes in Fabric lately (since I updated couchbase to 1.3.1). I don't really know how to trigger them ,that's why I can't add more details, but apparently it happens right after starting the synchronization.

      Crashed: com.yyy.xxx.couchbase
      0  libsystem_platform.dylib       0x18bb40ed0 _platform_memmove + 208
      1  xxx                            0x10032383c _docio_read_doc_component(docio_handle*, unsigned long long, unsigned int, void*, err_log_callback*) (docio.cc:899)
      2  xxx                            0x10032383c _docio_read_doc_component(docio_handle*, unsigned long long, unsigned int, void*, err_log_callback*) (docio.cc:899)
      3  xxx                            0x100324380 docio_read_doc (docio.cc:936)
      4  xxx                            0x100349284 fdb_get_byoffset (forestdb.cc:3656)
      5  xxx                            0x1003035c8 cbforest::KeyStore::getByOffsetNoErrors(unsigned long long, unsigned long long) const (KeyStore.cc:31)
      6  xxx                            0x100308a04 cbforest::VersionedDocument::readBodyOfRevision(cbforest::Revision const*, unsigned long long) const (VersionedDocument.cc:39)
      7  xxx                            0x10030d148 C4DocumentInternal::loadSelectedRevBody(C4Error*) (memory:4275)
      8  xxx                            0x1002fb480 +[CBLForestBridge loadBodyOfRevisionObject:fromSelectedRevision:] (CBLForestBridge.mm:286)
      9  xxx                            0x1002fb3d8 +[CBLForestBridge revisionObjectFromForestDoc:docID:revID:withBody:status:] (CBLForestBridge.mm:273)
      10 xxx                            0x1002f3380 -[CBL_ForestDBStorage getParentRevision:] (CBL_ForestDBStorage.mm:396)
      11 xxx                            0x1003ad914 -[CBLSavedRevision parentRevision] (CBLRevision.m:207)
      12 xxx                            0x10024d168 Replicator.(setupReplicationFilters(CBLReplication) -> ()).(closure #1) (Replicator.swift:184)
      13 xxx                            0x10025148c partial apply for Replicator.(setupReplicationFilters(CBLReplication) -> ()).(closure #1) (Replicator.swift)
      14 xxx                            0x10024d81c thunk (Replicator.swift)
      15 xxx                            0x1003eaac8 -[CBLDatabase(Internal) runFilter:params:onRevision:] (CBLDatabase+Internal.m:695)
      16 xxx                            0x1002f3eec -[CBL_ForestDBStorage changesSinceSequence:options:filter:status:] (CBL_ForestDBStorage.mm:552)
      17 xxx                            0x1003ea680 -[CBLDatabase(Internal) changesSinceSequence:options:filter:params:status:] (CBLDatabase+Internal.m:641)
      18 xxx                            0x1003d9020 -[CBLDatabase(Replication) unpushedRevisionsSince:filter:params:error:] (CBLDatabase+Replication.m:166)
      19 xxx                            0x1003ca394 -[CBLReplication pendingDocumentIDs] (CBLReplication.m:462)
      20 xxx                            0x1002504b0 specialized Replicator.log(currentState : SyncState, replication : CBLReplication) -> () (Replicator.swift:313)
      21 xxx                            0x100250748 specialized Replicator.pushReplicationProgress(NSNotification) -> () (Replicator.swift)
      22 xxx                            0x10024f0a8 @objc Replicator.pushReplicationProgress(NSNotification) -> () (Replicator.swift)
      23 CoreFoundation                 0x18ca4eb10 __CFNOTIFICATIONCENTER_IS_CALLING_OUT_TO_AN_OBSERVER__ + 20
      24 CoreFoundation                 0x18ca4e214 _CFXRegistrationPost + 400
      25 CoreFoundation                 0x18ca4df90 ___CFXNotificationPost_block_invoke + 60
      26 CoreFoundation                 0x18cabdb8c -[_CFXNotificationRegistrar find:object:observer:enumerator:] + 1504
      27 CoreFoundation                 0x18c98fe64 _CFXNotificationPost + 376
      28 Foundation                     0x18d4c4e0c -[NSNotificationCenter postNotificationName:object:userInfo:] + 68
      29 xxx                            0x1003ca19c -[CBLReplication updateStatus:error:processed:ofTotal:lastSeqPushed:serverCert:] (CBLReplication.m:435)
      30 xxx                            0x1003c9960 -[CBLReplication start] (CBLReplication.m:310)
      31 xxx                            0x10024ce14 Replicator.(start() -> ()).(closure #1) (Replicator.swift:124)
      32 libdispatch.dylib              0x18b93e1fc _dispatch_call_block_and_release + 24
      33 libdispatch.dylib              0x18b93e1bc _dispatch_client_callout + 16
      34 libdispatch.dylib              0x18b94c3dc _dispatch_queue_serial_drain + 928
      35 libdispatch.dylib              0x18b9419a4 _dispatch_queue_invoke + 652
      36 libdispatch.dylib              0x18b94c8d8 _dispatch_queue_override_invoke + 360
      37 libdispatch.dylib              0x18b94e34c _dispatch_root_queue_drain + 572
      38 libdispatch.dylib              0x18b94e0ac _dispatch_worker_thread3 + 124
      39 libsystem_pthread.dylib        0x18bb472a0 _pthread_wqthread + 1288
      40 libsystem_pthread.dylib        0x18bb46d8c start_wqthread + 4
      


      • * Version: 1.3.1
      • Client OS: iOS 10.2
      • Server: CouchDB 1.x

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            daniel.petersen Daniel Petersen
            daniel.petersen Daniel Petersen
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty