MB-23835: Propagate allocation failure in docio_init()

* The failure of the allocation of aligned memory causes various kinds
of crashes in DocIO layer.

* Set 'handle->readbuffer' to NULL if allocation failed.

* Propagate error to caller layer, to handle it gracefully.

Change-Id: I5aa3b5dc3d7f777f2b48fc69a12e15e30c15a529
Reviewed-on: http://review.couchbase.org/76925
Reviewed-by: Sundararaman Sridharan <sundar@couchbase.com>
Tested-by: Jung-Sang Ahn <jungsang.ahn@gmail.com>